[package]
name = "back"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.33.0", features = ["full"]}
serde = { version = "1.0", features = ["derive"] }
mongodb = {version = "2.7.0", features = ["tokio-sync"]}
rocket = {version = "=0.5.0-rc.3", features = ["json"]}
serde_json = "1.0"
chrono = {version = "0.4.31"}
