[package]
name = "back"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.33.0", features = ["full"]}
serde = { version = "1.0", features = ["derive"] }
mongodb = {version = "2.7.0", features = ["tokio-sync"]}
serde_json = "1.0"
chrono = {version = "0.4.31"}
actix-web = "4.4.0"
futures = "0.3.29"
crypto = "0.5.1"
jsonwebtoken = "9.1.0"
rustcrypto = "0.0.0"
sha2 = "0.10.8"
time = "0.3.30"
rand = "0.8.5"

