[package]
name = "back"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.33.0", features = ["full"]}
serde = { version = "1.0", features = ["derive"] }
mongodb = {version = "2.7.0", features = ["tokio-sync"]}
serde_json = "1.0"
chrono = {version = "0.4.31"}
actix-web = "4.4.0"
futures = "0.3.29"
sha2 = "0.10.8"
rand = "0.8.5"
actix-web-httpauth = "0.8.1"
clap = { version = "4.4.11", features = ["derive"] }
lettre = { version = "0.11.2", features = ["serde"] }
actix-files = { version = "0.6.2", features = ["tokio-uring"] }

